3-Add authorization and require auth middleware with jwt
