# models/userModel.go
@@ -1,0 +1,9 @@
+package models
+
+import "gorm.io/gorm"
+
+type User struct {
+	gorm.Model
+	Email    string `gorm:"uniqe"`
+	Password string
+}
